Version 1.5.0-svn:
 * language and i18n:
   * updated translations: Dutch, French, Galician, Hungarian, Japanese,
     Russian, Spanish
 * map editor:
   * Fixed not working "Update transition" and make "Delay transition update"
     directly trigger an update when toggled off.
 * miscellaneous and bug fixes:
   * added VICTORY_AND_DEFEAT_MUSIC macro - not wiring it in in trunk
     content, in the hope that we get engine support for this soon, but it's
     here to use in the meantime
   * 'road' is no longer aliased to grassland. It now has its own key in
     movetypes.  Note!  This will create compatibility issues with UMC
     that relies on a grassland= in a movetype or [defense] tag to also
     set stats for roads.
   * remove an ancient wml update program which has been obsoleted by wmllint
   * added the boost regex dependency
   * added the sdl-ttf dependency
   * default gender selection now works correctly for units with
     only a female variant.  Fixes bug #11197.
   * Fixed all C++ code that did string comparisons against WML attribute
     "canrecruit" to use the standard WML utility function utils::string_bool() instead
   * Fixed a border case of unit portrait advancement on which generic portraits would be
     treated as character-specific (affected female Elvish Archer line; it also theoretically
     affected units with [variation]s using different portraits)

Version 1.4:
 * language and i18n:
   * new translation: traditional Chinese
   * updated translations: Catalan, Chinese, Czech, Danish, Dutch, Esperanto,
     Finnish, French, German, Hungarian, Japanese, Lithuanian, Polish, Russian,
     Slovak, Spanish, Turkish, Valencian
 * graphics:
   * more elvish portraits
 * multiplayer:
   * revised maps: Cynsaun Battlefield
   * messages will no longer default to the private channel when observing
     or joining a new game
   * fixed an invalid vector access, which could happen since linger mode